# Safessh

./: .gitignore  CMakeLists.txt  CMakePresets.json  index.html  package-lock.json  package.json
cmake/: CompilerWarnings.cmake
resources/: resources.qrc
resources/styles/: dark.qss  light.qss
src/: App.tsx  CMakeLists.txt  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  serial.rs  sftp.rs  ssh.rs  vault.rs
src/components/: ConnectionDialog.tsx  ConnectionList.tsx  ContextMenu.tsx  SFTPBrowser.tsx  Terminal.tsx  VaultDialog.tsx
src/core/: CMakeLists.txt  ConnectionConfig.cpp  ConnectionConfig.h  ProtocolHandler.cpp  ProtocolHandler.h  RDPSession.cpp  RDPSession.h  SSHSession.cpp  SSHSession.h  SerialSession.cpp  SerialSession.h  SessionManager.cpp  SessionManager.h  TelnetSession.cpp  TelnetSession.h  VNCSession.cpp  VNCSession.h
src/crypto/: CMakeLists.txt  KeyDerivation.cpp  KeyDerivation.h  Vault.cpp  Vault.h
src/import/: CMakeLists.txt  SSHConfigImporter.cpp  SSHConfigImporter.h  TermiusImporter.cpp  TermiusImporter.h
src/lib/: icons.tsx  types.ts
src/styles/: globals.css
src/ui/: CMakeLists.txt  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionListWidget.cpp  ConnectionListWidget.h  MainWindow.cpp  MainWindow.h  SFTPBrowser.cpp  SFTPBrowser.h  SettingsDialog.cpp  SettingsDialog.h  TerminalTabWidget.cpp  TerminalTabWidget.h  ThemeManager.cpp  ThemeManager.h  VaultDialog.cpp  VaultDialog.h
tests/: CMakeLists.txt  test_session.cpp  test_vault.cpp
