[package]
name = "safessh"
version = "0.2.0"
edition = "2021"

[lib]
name = "safessh_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.50"
russh-keys = "0.49"
ssh2 = { version = "0.9" }
async-trait = "0.1"
anyhow = "1"
serialport = "4"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
